tests/ui/unused_label.stderr
error: unused variable: `unused_label`
  --> tests/ui/unused_label.rs:10:9
   |
10 |         unused_label: maybe ready(2),
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_unused_label`
   |
note: the lint level is defined here
  --> tests/ui/unused_label.rs:1:9
   |
 1 | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unused_variables)]` implied by `#[deny(warnings)]`
